# c_brick_game

./: CMakeLists.txt  Makefile  README.md
materials/: instructions_for_testing.md  library-specification.md  library-specification_RUS.md
src/brick_game/tetris/: tetris.c
src/brick_game/tetris/backend/: fsm_matrix.c
src/brick_game/tetris/backend/board/: board.c
src/brick_game/tetris/backend/cell/: cell.c
src/brick_game/tetris/backend/game_state/: game_state.c
src/brick_game/tetris/backend/parameters/: parameters.c
src/brick_game/tetris/backend/player/: player.c
src/brick_game/tetris/backend/tetramino/: tetramino.c
src/brick_game/tetris/inc/: board.h  cell.h  constants.h  fsm_matrix.h  game_state.h  macros.h  parameters.h  player.h  structs.h  tetramino.h  tetris.h
tests/tetris_tests/: board_suite.c  collision_suite.c  fsm_suite.c  game_state_suite.c  manual_test.c  player_suite.c  rename_suite.c  test.c  test.h
